ocaml/testsuite/tests/jane-modular-syntax/user_error5.compilers.reference
File "user_error5.ml", line 21, characters 30-34:
21 | let _unnamed_extension = () [@jane];;
                                   ^^^^
Error: Cannot have an attribute named [@jane]: Missing erasability and feature components
